xee-xpath/src/snapshots/xee_xpath__parse_ast__tests__range.snap
---
source: xee-xpath/src/parse_ast.rs
expression: "parse_expr_single(\"1 to 2\")"
---
(
    Binary(
        BinaryExpr {
            operator: Range,
            left: PathExpr {
                steps: [
                    (
                        PrimaryExpr(
                            (
                                Literal(
                                    Integer(
                                        1,
                                    ),
                                ),
                                0..1,
                            ),
                        ),
                        0..1,
                    ),
                ],
            },
            right: PathExpr {
                steps: [
                    (
                        PrimaryExpr(
                            (
                                Literal(
                                    Integer(
                                        2,
                                    ),
                                ),
                                5..6,
                            ),
                        ),
                        5..6,
                    ),
                ],
            },
        },
    ),
    0..6,
)
