xee-xpath/src/snapshots/xee_xpath__parse_ast__tests__reverse_axis.snap
---
source: xee-xpath/src/parse_ast.rs
expression: "parse_expr_single(\"parent::foo\")"
---
(
    Path(
        PathExpr {
            steps: [
                (
                    AxisStep(
                        AxisStep {
                            axis: Parent,
                            node_test: NameTest(
                                Name(
                                    Name {
                                        name: "foo",
                                        namespace: None,
                                    },
                                ),
                            ),
                            predicates: [],
                        },
                    ),
                    SourceSpan {
                        offset: SourceOffset(
                            0,
                        ),
                        length: SourceOffset(
                            11,
                        ),
                    },
                ),
            ],
        },
    ),
    SourceSpan {
        offset: SourceOffset(
            0,
        ),
        length: SourceOffset(
            11,
        ),
    },
)
