xee-xpath/src/snapshots/xee_xpath__parse_ast__tests__simple_comma.snap
---
source: xee-xpath/src/parse_ast.rs
expression: "parse_xpath_no_default_ns(\"1, 2\")"
---
Ok(
    XPath {
        exprs: [
            (
                Path(
                    PathExpr {
                        steps: [
                            PrimaryExpr(
                                (
                                    Literal(
                                        Integer(
                                            1,
                                        ),
                                    ),
                                    0..1,
                                ),
                            ),
                        ],
                    },
                ),
                0..1,
            ),
            (
                Path(
                    PathExpr {
                        steps: [
                            PrimaryExpr(
                                (
                                    Literal(
                                        Integer(
                                            2,
                                        ),
                                    ),
                                    3..4,
                                ),
                            ),
                        ],
                    },
                ),
                3..4,
            ),
        ],
    },
)
