xee-xpath/src/snapshots/xee_xpath__parse_ast__tests__simple_map.snap
---
source: xee-xpath/src/parse_ast.rs
expression: "parse_expr_single(\"(1, 2) ! (. * 2)\")"
---
(
    Apply(
        ApplyExpr {
            path_expr: PathExpr {
                steps: [
                    PrimaryExpr(
                        (
                            Expr(
                                [
                                    (
                                        Path(
                                            PathExpr {
                                                steps: [
                                                    PrimaryExpr(
                                                        (
                                                            Expr(
                                                                [
                                                                    (
                                                                        Path(
                                                                            PathExpr {
                                                                                steps: [
                                                                                    PrimaryExpr(
                                                                                        (
                                                                                            Literal(
                                                                                                Integer(
                                                                                                    1,
                                                                                                ),
                                                                                            ),
                                                                                            1..2,
                                                                                        ),
                                                                                    ),
                                                                                ],
                                                                            },
                                                                        ),
                                                                        1..2,
                                                                    ),
                                                                    (
                                                                        Path(
                                                                            PathExpr {
                                                                                steps: [
                                                                                    PrimaryExpr(
                                                                                        (
                                                                                            Literal(
                                                                                                Integer(
                                                                                                    2,
                                                                                                ),
                                                                                            ),
                                                                                            4..5,
                                                                                        ),
                                                                                    ),
                                                                                ],
                                                                            },
                                                                        ),
                                                                        4..5,
                                                                    ),
                                                                ],
                                                            ),
                                                            1..5,
                                                        ),
                                                    ),
                                                ],
                                            },
                                        ),
                                        1..5,
                                    ),
                                ],
                            ),
                            0..6,
                        ),
                    ),
                ],
            },
            operator: SimpleMap(
                [
                    PathExpr {
                        steps: [
                            PrimaryExpr(
                                (
                                    Expr(
                                        [
                                            (
                                                Binary(
                                                    BinaryExpr {
                                                        operator: Mul,
                                                        left: PathExpr {
                                                            steps: [
                                                                PrimaryExpr(
                                                                    (
                                                                        ContextItem,
                                                                        10..11,
                                                                    ),
                                                                ),
                                                            ],
                                                        },
                                                        right: PathExpr {
                                                            steps: [
                                                                PrimaryExpr(
                                                                    (
                                                                        Literal(
                                                                            Integer(
                                                                                2,
                                                                            ),
                                                                        ),
                                                                        14..15,
                                                                    ),
                                                                ),
                                                            ],
                                                        },
                                                    },
                                                ),
                                                10..15,
                                            ),
                                        ],
                                    ),
                                    9..16,
                                ),
                            ),
                        ],
                    },
                ],
            ),
        },
    ),
    0..16,
)
