xee-xpath/src/snapshots/xee_xpath__parse_ast__tests__single_for_expr.snap
---
source: xee-xpath/src/parse_ast.rs
expression: "parse_expr_single(\"for $x in 1 return 5\")"
---
(
    For(
        ForExpr {
            var_name: Name {
                name: "x",
                namespace: None,
            },
            var_expr: (
                Path(
                    PathExpr {
                        steps: [
                            (
                                PrimaryExpr(
                                    (
                                        Literal(
                                            Integer(
                                                1,
                                            ),
                                        ),
                                        10..11,
                                    ),
                                ),
                                10..11,
                            ),
                        ],
                    },
                ),
                10..12,
            ),
            return_expr: (
                Path(
                    PathExpr {
                        steps: [
                            (
                                PrimaryExpr(
                                    (
                                        Literal(
                                            Integer(
                                                5,
                                            ),
                                        ),
                                        19..20,
                                    ),
                                ),
                                19..20,
                            ),
                        ],
                    },
                ),
                19..20,
            ),
        },
    ),
    0..20,
)
